<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/settingsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutButton">

        <Button
            android:id="@+id/storyButton"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="5sp"
            android:text="@string/profile">

        </Button>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="5sp"
            android:backgroundTint="@color/main_red"
            android:text="@string/logout">

        </Button>

    </GridLayout>

    <TextView
        android:id="@+id/levelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_main"
        android:textColor="@color/black"
        android:textSize="@dimen/h3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="5sp"
        app:layout_constraintTop_toBottomOf="@id/levelText">

        <Button
            android:id="@+id/psychologists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_red"
            android:text="@string/psychologists" />

        <Button
            android:id="@+id/mediumLevelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_yellow"
            android:text="@string/articles" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>